@@ -12,7 +12,7 @@ AS=		5a
 ASFLAGS=
 
 CC=		5c
-CFLAGS=		-wFV -I$ROOT/Inferno/arm/include -I$ROOT/include
+CFLAGS=		-wFV -I$ROOT/Inferno/$OBJTYPE/include -I$ROOT/Inferno/include -I$ROOT/include
 ANSICPP= -p
 
 LD=		5l
