@@ -12,7 +12,7 @@ AS=		va
 ASFLAGS=
 
 CC=		vc
-CFLAGS=		-wFV -I$ROOT/Inferno/mips/include -I$ROOT/include
+CFLAGS=		-wFV -I$ROOT/Inferno/$OBJTYPE/include -I$ROOT/Inferno/include -I$ROOT/include
 ANSICPP= -p
 
 LD=		vl
