@@ -12,7 +12,7 @@ AS=		8a
 ASFLAGS=
 
 CC=		8c
-CFLAGS=		-wFVT -I$ROOT/Plan9/386/include -I$ROOT/include
+CFLAGS=		-wFVT -I$ROOT/Plan9/$OBJTYPE/include -I$ROOT/Plan9/include -I$ROOT/include
 ANSICPP= -p
 
 LD=		8l
