@@ -12,7 +12,7 @@ AS=		6a
 ASFLAGS=
 
 CC=		6c
-CFLAGS=		-wFV -I$ROOT/Plan9/amd64/include -I$ROOT/include
+CFLAGS=		-wFV -I$ROOT/Plan9/$OBJTYPE/include -I$ROOT/Plan9/include -I$ROOT/include
 ANSICPP= -p
 
 LD=		6l
